--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 <div class="tsd-page-title">
 <h2>ChURI Schema Compiler</h2></div>
 <div class="tsd-panel tsd-typography"><a id="md:churi-schema-compiler" class="tsd-anchor"></a><h1><a href="#md:churi-schema-compiler">ChURI Schema Compiler</a></h1><p><a href="https://www.npmjs.com/package/ts-transformer-churi"><img src="https://img.shields.io/npm/v/ts-transformer-churi.svg?logo=npm" alt="NPM"></a>
-<a href="https://github.com/hatsyjs/ts-transformer-churi/actions?query=workflow:Build"><img src="https://github.com/hatsyjs/ts-transformer-churi/workflows/Build/badge.svg" alt="Build Status"></a>
-<a href="https://app.codacy.com/gh/hatsyjs/ts-transformer-churi/dashboard?utm_source=gh&utm_medium=referral&utm_content=&utm_campaign=Badge_grade"><img src="https://app.codacy.com/project/badge/Grade/8641bd8988254172b3208a4180163807" alt="Code Quality"></a>
-<a href="https://app.codacy.com/gh/hatsyjs/ts-transformer-churi/dashboard?utm_source=gh&utm_medium=referral&utm_content=&utm_campaign=Badge_coverage"><img src="https://app.codacy.com/project/badge/Coverage/8641bd8988254172b3208a4180163807" alt="Coverage"></a>
-<a href="https://github.com/hatsyjs/ts-transformer-churi"><img src="https://img.shields.io/static/v1?logo=github&label=GitHub&message=project&color=informational" alt="GitHub Project"></a>
-<a href="https://hatsyjs.github.io/ts-transformer-churi/"><img src="https://img.shields.io/static/v1?logo=typescript&label=API&message=docs&color=informational" alt="API Documentation"></a></p>
-<p>See the <a href="https://hatsyjs.github.io/ts-transformer-churi/">API documentation</a>.</p>
+<a href="https://github.com/UCNot/ts-transformer-churi/actions?query=workflow:Build"><img src="https://github.com/UCNot/ts-transformer-churi/workflows/Build/badge.svg" alt="Build Status"></a>
+<a href="https://app.codacy.com/gh/UCNot/ts-transformer-churi/dashboard?utm_source=gh&utm_medium=referral&utm_content=&utm_campaign=Badge_grade"><img src="https://app.codacy.com/project/badge/Grade/cd906c85f2f54cfc8dc33ae249bcb780" alt="Code Quality"></a>
+<a href="https://app.codacy.com/gh/UCNot/ts-transformer-churi/dashboard?utm_source=gh&utm_medium=referral&utm_content=&utm_campaign=Badge_coverage"><img src="https://app.codacy.com/project/badge/Coverage/cd906c85f2f54cfc8dc33ae249bcb780" alt="Coverage"></a>
+<a href="https://github.com/UCNot/ts-transformer-churi"><img src="https://img.shields.io/static/v1?logo=github&label=GitHub&message=project&color=informational" alt="GitHub Project"></a>
+<a href="https://ucnot.github.io/ts-transformer-churi/"><img src="https://img.shields.io/static/v1?logo=typescript&label=API&message=docs&color=informational" alt="API Documentation"></a></p>
+<p>See the <a href="https://ucnot.github.io/ts-transformer-churi/">API documentation</a>.</p>
 </div></div>
 <div class="col-sidebar">
 <div class="page-menu">
