--- a/interfaces/UcTransformerOptions.html
+++ b/interfaces/UcTransformerOptions.html
@@ -24,7 +24,7 @@
 <ul class="tsd-hierarchy">
 <li><span class="target">UcTransformerOptions</span></li></ul></section><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/UCNot/ts-transformer-churi/blob/e74e00c/src/uc-transformer-options.ts#L4">uc-transformer-options.ts:4</a></li></ul></aside>
+<li>Defined in <a href="https://github.com/UCNot/ts-transformer-churi/blob/98b82d3/src/uc-transformer-options.ts#L4">uc-transformer-options.ts:4</a></li></ul></aside>
 <section class="tsd-panel-group tsd-index-group">
 <section class="tsd-panel tsd-index-panel">
 <details class="tsd-index-content tsd-index-accordion" open><summary class="tsd-accordion-summary tsd-index-summary">
@@ -45,7 +45,7 @@
 </div>
 <div class="tsd-comment tsd-typography"></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/UCNot/ts-transformer-churi/blob/e74e00c/src/uc-transformer-options.ts#L10">uc-transformer-options.ts:10</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/UCNot/ts-transformer-churi/blob/98b82d3/src/uc-transformer-options.ts#L10">uc-transformer-options.ts:10</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member"><a id="tempDir" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <code class="tsd-tag ts-flagReadonly">Readonly</code> <span>temp<wbr/>Dir</span><a href="#tempDir" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">temp<wbr/>Dir</span><span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type">string</span></div>
@@ -57,7 +57,7 @@
 </div>
 <div class="tsd-comment tsd-typography"></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/UCNot/ts-transformer-churi/blob/e74e00c/src/uc-transformer-options.ts#L24">uc-transformer-options.ts:24</a></li></ul></aside></section></section></div>
+<li>Defined in <a href="https://github.com/UCNot/ts-transformer-churi/blob/98b82d3/src/uc-transformer-options.ts#L24">uc-transformer-options.ts:24</a></li></ul></aside></section></section></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
@@ -84,5 +84,5 @@
 <li><a href="UcTransformerOptions.html" class="current"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><g id="icon-256"><rect fill="var(--color-icon-background)" stroke="var(--color-ts-interface)" stroke-width="1.5" x="1" y="1" width="22" height="22" rx="6"></rect><path d="M9.51 16V15.016H11.298V8.224H9.51V7.24H14.19V8.224H12.402V15.016H14.19V16H9.51Z" fill="var(--color-text)"></path></g></svg><span>Uc<wbr/>Transformer<wbr/>Options</span></a></li>
 <li><a href="../functions/default.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><g id="icon-64"><rect fill="var(--color-icon-background)" stroke="var(--color-ts-function)" stroke-width="1.5" x="1" y="1" width="22" height="22" rx="6"></rect><path d="M9.39 16V7.24H14.55V8.224H10.446V11.128H14.238V12.112H10.47V16H9.39Z" fill="var(--color-text)"></path></g></svg><span>default</span></a></li></ul></nav></div></div></div>
 <div class="tsd-generator">
-<p>Generated using <a href="https://typedoc.org/" target="_blank">TypeDoc</a></p></div>
+<p>Generated using <a href="https://typedoc.org/" rel="noopener" target="_blank">TypeDoc</a></p></div>
 <div class="overlay"></div></body></html>
